test/smali_classes2/mobi/lab/veriff/views/error/a$a.smali
.class public interface abstract Lmobi/lab/veriff/views/error/a$a;
.super Ljava/lang/Object;
.source "SourceFile"


# virtual methods
.method public abstract a()Z
.end method
